--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'sense', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+    font-family: 'sense';
+    src: url(../public/font/woff2/iransans-web-ultralight.woff2) format(woff2);
+    src: url(../public/font/woff2/iransans-web-medium.woff2) format(woff2);
+    src: url(../public/font/woff2/iransans-web-black.woff2) format(woff2);
+    src: url(../public/font/woff2/iransans-web-light.woff2) format(woff2);
 }
