--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,10 @@
     --main-color: #0052a8;
 }
 
+a {
+    text-decoration: none;
+}
+
 @media screen and (min-width: 360px) {
     .Nav {
         display: flex;
