--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,6 +21,11 @@ a {
         width: 100%;
         border-radius: 5px;
         padding: 0.8rem 1rem;
+        text-decoration: none;
+        transition-duration: 0.7s;
+    }
+    .Nav-sm :hover {
+        color: black;
     }
     .Nav-sm a:hover {
         background-color: rgb(240, 240, 240);
