--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,45 +1,39 @@
 @media screen and (min-width: 100px) {
-        .doctor-main img {
-            display: none;
-            width: 50%;
-            position: relative;
-            object-fit: cover;
-        }
     .Product-main div h2 {
         border: 1px solid gray;
     }
 }
 @media screen and (min-width: 360px) {
-    .doctor-main{
-        display: flex;
-        align-items: center;
-        text-align: start;
-        background-color: rgb(121, 224, 121);
-        padding: 0 1rem;
-        padding-top: 1rem;
-        border-radius: 8px;
+    .main-container {
         margin-top: 1rem;
     }
-    .doctor-main img {
-        position: relative;
-        object-fit: cover;
-    }
-    .doctor-main div {
-        position: absolute;
+    .doctor-main {
+        display: flex;
+        background-color: #61ce70;
+        width: 100%;
         color: white;
         padding: 1rem;
+        border-radius: 10px;
+        padding-bottom: 0;
+        height: 100%;
+        margin-bottom: 2rem;
+    }
+    .doctor-main div img {
+        width: 80%;
+        object-fit: contain;
+        margin-right: 2rem;
+    }
+    .doctor-main div {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
     }
     .doctor-main div h1 {
-        font-size: 1rem;
-        margin-bottom: 1rem;
+        font-size: 1.5rem;
+        margin-top: 1rem;
     }
     .doctor-main div p {
-        font-size: 0.8rem;
-        width: 80%;
-        font-weight: bold;
-    }
-    .doctor-main div button {
-        margin-top: 5rem;
+        margin: 1rem 0;
     }
     .Product-main {
         background-color: rgb(255, 65, 65);
@@ -50,7 +44,6 @@
         align-items: center;
         text-align: center;
         border-radius: 10px;
-        margin-top: 1rem;
         width: 100%;
     }
     .Product-main img {
@@ -83,15 +76,13 @@
 @media screen and (min-width: 990px) {
     .main-container {
         display: flex;
-        
         gap: 1rem;
-    }
-    .doctor-main {
-        width: 80%;
-        height: 400px;
     }
     .Product-main {
         width: 30%;
+    }
+    .doctor-main {
+        height: 100%;
     }
     .doctor-main div h1 {
         font-size: 1.3rem;
@@ -100,6 +91,26 @@
     }
     .doctor-main div p {
         font-size: 1rem;
+    }
+    .doctor-main {
+        margin-bottom: 0;
+        justify-content: space-between;
+    }
+    .doctor-main div img {
+        width: 65%;
+        margin-right: 5rem;
+    }
+    .doctor-main div {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .doctor-main div h1 {
+        margin-bottom: 0;
+    }
+    .doctor-main div p {
+        margin-bottom: 2rem;
     }
 }
 @media screen and (min-width: 1200px) {
