--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -52,6 +52,131 @@
         display: grid;
         grid-template-columns: 1fr;
     }
+    .des-product {
+        display: flex;
+        border: 1px solid rgb(216, 216, 216);
+        padding: 3rem;
+        margin-top: 3rem;
+        border-radius: 10px;
+    }
+    .about-product-dis h1  {
+        color: #0052a8;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+    .about-product-dis p {
+        background-color: rgb(235, 235, 235);
+        color: gray;
+        padding: 2rem;
+        margin-top: 2rem;
+        border-radius: 10px;
+    }
+    .about-product-dis div{
+        display: flex;
+        justify-content: center;
+        gap: 0.7rem;
+    }
+    .about-product-dis div h3 {
+        color: gray;
+        font-weight: bold;
+    }
+    .about-product-dis div button, .about-product-dis div div button {
+        padding: 0.2rem 1rem;
+        border: none;
+        background-color: #61ce70;
+        color: #fff;
+        border-radius: 10px;
+        transition-duration: 0.7s;
+    }
+    .about-product-dis div div button:hover {
+        opacity: 0.9;
+    }
+    .about-product-img {
+        margin-right: 2rem;
+        border: 1px solid gray;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
+    .about-product-img img{
+        width: 100%;
+        border-radius: 10px;
+    }
+    .product-price {
+        display: flex !important;
+        justify-content: space-around !important;
+        align-items: center;
+        margin-bottom: 2rem;
+    }
+    .product-price h5 , .product-price h3{
+        background-color: rgb(234, 234, 234);
+        color: gray;
+        padding: 0.5rem;
+        border-radius: 10px;
+    }
+    .product-price h3 {
+        background-color: transparent;
+        font-size: 1.5rem;
+    }
+    .addProduct {
+        margin-top: 3rem;
+        justify-content: start !important;
+    }
+    .pointview {
+        border: 1px solid rgb(230, 230, 230);
+        padding: 2rem;
+    }
+    .pointview h5 {
+        color: gray;
+        font-size: 1rem;
+        margin-bottom: 2rem;
+    }
+    .pointview div {
+        display: flex;
+        justify-content: space-around;
+    }
+    .pointview div input {
+        width: 100%;
+        margin-left: 1rem;
+        padding: 0.5rem;
+        border-radius: 10px;
+        border: 1px solid gray;
+    }
+    .pointview div input:focus {
+        outline: none;
+    }
+    .pointview textarea {
+        width: 98.8%;
+        margin-top: 2rem;
+        padding: 1rem;
+        border-radius: 10px;
+    }
+    .pointview textarea:focus {
+        outline: none;
+    }
+    .pointview button {
+        border: none;
+        background-color: #61ce70;
+        color: white;
+        border-radius: 10px;
+        padding: 0.5rem;
+        margin-top: 2rem;
+        transition-duration: 0.7s;
+    }
+    .pointview button:hover {
+        opacity: 0.9;
+    }
+    .Allproduct-card {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .Allproduct-card a {
+        border: 1px solid gainsboro;
+        margin: 1rem;
+        border-radius: 10px;
+    }
 }
 @media screen and (min-width: 990px) {
     .Product-swip {
